plz stop overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -105,6 +105,7 @@
   margin-bottom: 0;
 }
 .Info-FAQ-Text {
+  overflow-y: auto;
   margin-top: 0;
   margin: 3vh;
   
