--- a/client/src/LandingPage.css
+++ b/client/src/LandingPage.css
@@ -40,7 +40,7 @@
     color: white;
 }
 .join-button{
-    margin-top: 3vh;
+    margin-top: 2vh;
     background-color:  #C81539;
     border: 3px solid  #C81539;
     /* border-radius: 5px; */
@@ -60,6 +60,6 @@
     font-size: calc(3px + 1.1vmin);
 }
 .social_media {
-    margin: 20px;
+    margin: 10px;
 }
 
